# exahost

./: Cargo.toml  README.md  ú
hosts/: config.toml
src/: compiler.rs  config.rs  exa.rs  exavm.rs  file.rs  lexar.rs  lib.rs  linker.rs  main.rs  server.rs  signal.rs  vm.rs
src/compiler/: config.rs  mod.rs
src/config/: compiler_config.rs  mod.rs  vm_config.rs
src/exa/: arg.rs  file.rs  instruction.rs  lexar.rs  mod.rs  packed_exa.rs  register.rs  status.rs
src/exavm/: exa.rs
src/instruction/: arg.rs  mod.rs  opcode.rs
src/runtime/: fs.rs  ipc.rs  mod.rs  net.rs
src/runtime/fs/: file.rs  mod.rs
src/runtime/hw_register/: mod.rs
src/server/: link_actions.rs  mod.rs
src/server/link/: message.rs  mod.rs
src/server/protocol/: error.rs  message.rs  message_stream.rs  mod.rs
src/vm/: bridge.rs  config.rs  hw_register.rs  mod.rs
