[package]
name = "exahost"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3.3"
flume = "0.11.0"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
toml = { version = "0.8.12", features = ["preserve_order"] }
regex = "1.10.4"

[features]
default = []
full-register-range = []
